[package]
name = "rock_paper_scissors"
version = "0.1.0"
edition = "2021"

[dependencies]
#raylib = { git = "https://github.com/raylib-rs/raylib-rs.git" }
raylib = { git = "https://github.com/raylib-rs/raylib-rs.git", features = ["opengl_21"] }
ecs = { git = "https://github.com/jurmc/ecs.git", branch="system-apply-returns-closure-with-changes-further-to-be-applied-to-whole-ecs" }

